# nas

./: .gitignore  BUGS  BUILDNOTES  CHANGES  FAQ  HISTORY  Imakefile  README  README.CYGWIN  RELEASE  TODO  diffs-p5.p5-4  nas.lsm  nas.txt
config/: Imakefile  NasConfig.h  NetAudio.def  NetAudio.tmpl  NetAudio.tmpl.shared  aclocal.m4  configure  configure.ac  filelist  makesrcpkg
contrib/rc/: nasd
contrib/xmms-nas-0.2/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  about.c  aclocal.m4  audio.c  configure  configure.in  mkinstalldirs  nas.c  nas.h  nasconf.c
doc/: README
doc/html/: AuAnyEvent.3.html  AuBucketAttributes.3.html  AuCloseServer.3.html  AuConvertDataToShort.3.html  AuConvertShortToData.3.html  AuCreateBucket.3.html  AuCreateFlow.3.html  AuDataFormats.3.html  AuDataTypes.3.html  AuDefineToFormat.3.html  AuDestroyBucket.3.html  AuDestroyFlow.3.html  AuDeviceAttributes.3.html  AuDispatchEvent.3.html  AuElement.3.html  AuElementNotifyEvent.3.html  AuElementParameters.3.html  AuElementState.3.html  AuErrorEvent.3.html  AuEvent.3.html  (+114 more)
include/: Imakefile
patches/: ConnSvr.patch  allowmixfail.patch  allowmixfail.patch.txt  allowmixfail.patch~  inma-Alibint.c  mark.davies-RCMAN.patch  mark.davies-RCMAN.patch~  mark.davies-bsd-dragonfly.patch~  mark.davies.nas.diff1  nas-1.5e-win-patch  nas-1.6-64bit-fixes.patch  nas-aupanel-mute-version1-to-version2.patch  nas-aupanel-mute.patch  nastest.c  patch.audemo  sm-config.diff  steve-mcintyre-gcc-4.0.patch  steve-mcintyre-mantypos.patch
server/: Imakefile  cygcompile.sh  nasd.conf.eg  nasd.conf.man  nasd.man
(+326 files in other folders)
