dnl Process this file with autoconf to produce a configure script.
AC_INIT(nas.h)
AM_INIT_AUTOMAKE(xmms-nas, 0.2)
AM_PROG_LIBTOOL
dnl AM_DISABLE_STATIC

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

AC_PATH_PROG(XMMS_PATH,xmms,no)

dnl Try to infer install path from location of xmms binary
AC_MSG_CHECKING([for xmms Output plugin directory])
if test -d "$libdir" ;then
  XMMS_LIBDIR=`dirname $libdir`
  prefix=`dirname $XMMS_LIBDIR`
  AC_MSG_RESULT([$libdir (given by user)])
elif test "$XMMS_PATH" = "no" ;then
    AC_MSG_ERROR([*** xmms not installed - please install first ***])
else
  XMMS_BINDIR=`dirname $XMMS_PATH`
  XMMS_PREFIX=`dirname $XMMS_BINDIR`
  libdir="${XMMS_PREFIX}/lib/xmms/Output"
  if test -d $libdir ;then
    AC_MSG_RESULT($libdir)
  else
    AC_MSG_RESULT([$libdir (** WARNING **: directory not found)])
  fi
fi

dnl Checks for libraries.
AM_PATH_GLIB(1.2.2,,AC_MSG_ERROR([*** GLIB >= 1.2.2 not installed - please install first ***]))
AM_PATH_GTK(1.2.2,,AC_MSG_ERROR([*** GTK+ >= 1.2.2 not installed - please install first ***]),gthread)

dnl Checks for header files.
AC_HEADER_STDC

AC_PATH_XTRA
NAS_LIBS="$X_LIBS $X_PRE_LIBS $X_EXTRA_LIBS -laudio -lXt -lm"
NAS_CFLAGS=$X_CFLAGS
LIBS=$NAS_LIBS
CFLAGS=$NAS_CFLAGS

AC_CHECK_LIB(audio, AuOpenServer,,AC_MSG_ERROR([*** Network Audio System not found - please install first ***]),-lXt -lm)

AC_SUBST(NAS_LIBS)
AC_SUBST(NAS_CFLAGS)
AC_OUTPUT(Makefile)
